tests/golden/invalid/unknown-call-01.rego
package fregot.tests.invalid.unknown_call_01

test_something {
  bar.unknown_call(1)
}
